:bug: sideBar 열렸을 때 스크롤 못하게 하기 & z-index 정리

--- a/layout/MainLayout/MainFooter/MainFooter.module.scss
+++ b/layout/MainLayout/MainFooter/MainFooter.module.scss
@@ -3,10 +3,11 @@
 .footer {
   position: fixed;
   bottom: 0;
-  width: min(100%, 480px);
+  width: min(100vw, 480px);
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   background-color: #fff;
+  z-index: 21;
   filter: drop-shadow(0px 14px 60px rgba(98, 98, 98, 0.25));
 }
 
