--- a/layout/MainLayout/MainHeader/MainHeader.module.scss
+++ b/layout/MainLayout/MainHeader/MainHeader.module.scss
@@ -2,10 +2,13 @@
 
 .header {
   display: flex;
+  position: fixed;
+  top: 0;
+  width: min(100vw, 480px);
   justify-content: space-between;
   padding: 10px 32px 10px 32px;
   box-shadow: 0 14px 60px rgba(98, 98, 98, 0.25);
-  z-index: 1;
+  z-index: 21;
 
   button {
     cursor: pointer;
